add more styles

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  background: url('./background-img.jpg');
+  background-size: cover; 
+  padding: 2em;
 }
 
 .container {
@@ -8,6 +11,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 500px;
+  padding: 2em;
+  color: white;
+  margin: 0 auto;
+  background: black;
+  border-radius: 5px;
 }
 
 h1 {
